--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/axios": "^5.12.0",
+    "lodash": "^4.17.20",
     "nuxt": "^2.14.0",
     "nuxt-buefy": "^0.3.31"
   },
